--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -40,46 +40,42 @@ env:
   SERVICE: 'tfm-server'
 
 jobs:
-  build:
-    runs-on: 'ubuntu-latest'
-    steps:
-      # Docker Build
-        - name: 'gcr.io/cloud-builders/docker'
-          run: 'build -t us-central1-docker.pkg.dev/${PROJECT_ID}/tfm/{SERVICE}  .'
+  # build:
+  #   runs-on: 'ubuntu-latest'
+  #   steps:
+  #     # Docker Build
+  #       - name: 'gcr.io/cloud-builders/docker'
+  #         run: 'build -t us-central1-docker.pkg.dev/${PROJECT_ID}/tfm/{SERVICE}  .'
   deploy:
     runs-on: 'ubuntu-latest'
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
-     # Docker Push
-        - name: 'gcr.io/cloud-builders/docker'
-          run: 'push us-central1-docker.pkg.dev/${PROJECT_ID}/tfm/{SERVICE} '
+      - name: 'Checkout'
+        uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # actions/checkout@v4
 
-  #   permissions:
-  #     contents: 'read'
-  #     id-token: 'write'
+      # Configure Workload Identity Federation and generate an access token.
+      #
+      # See https://github.com/google-github-actions/auth for more options,
+      # including authenticating via a JSON credentials file.
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
+        with:
+          workload_identity_provider: 'projects/725722089/locations/global/workloadIdentityPools/github' # TODO: replace with your workload identity provider
 
-  #   steps:
-  #     - name: 'Checkout'
-  #       uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # actions/checkout@v4
+      - name: 'Deploy to Cloud Run'
+        uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
+        with:
+          service: '${{ env.SERVICE }}'
+          region: '${{ env.REGION }}'
+          # NOTE: If using a different source folder, update the image name below:
+          source: './'
 
-  #     # Configure Workload Identity Federation and generate an access token.
-  #     #
-  #     # See https://github.com/google-github-actions/auth for more options,
-  #     # including authenticating via a JSON credentials file.
-  #     - id: 'auth'
-  #       name: 'Authenticate to Google Cloud'
-  #       uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
-  #       with:
-  #         workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider' # TODO: replace with your workload identity provider
-
-  #     - name: 'Deploy to Cloud Run'
-  #       uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
-  #       with:
-  #         service: '${{ env.SERVICE }}'
-  #         region: '${{ env.REGION }}'
-  #         # NOTE: If using a different source folder, update the image name below:
-  #         source: './'
-
-  #     # If required, use the Cloud Run URL output in later steps
-  #     - name: 'Show output'
-  #       run: |-
-  #         echo ${{ steps.deploy.outputs.url }}
+      # If required, use the Cloud Run URL output in later steps
+      - name: 'Show output'
+        run: |-
+          echo ${{ steps.deploy.outputs.url }}
