--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -38,14 +38,11 @@ env:
   PROJECT_ID: 'vast-formula-478020-a1'
   REGION: 'us-central1'
   SERVICE: 'tfm-server'
+  WORKLOAD_IDENTITY_PROVIDER: 'projects/725722089/locations/global/workloadIdentityPools/github' # TODO: replace with your workload identity provider
+
+
 
 jobs:
-  # build:
-  #   runs-on: 'ubuntu-latest'
-  #   steps:
-  #     # Docker Build
-  #       - name: 'gcr.io/cloud-builders/docker'
-  #         run: 'build -t us-central1-docker.pkg.dev/${PROJECT_ID}/tfm/{SERVICE}  .'
   deploy:
     runs-on: 'ubuntu-latest'
 
@@ -55,7 +52,7 @@ jobs:
 
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # actions/checkout@v4
+        uses: 'actions/checkout@v4' # actions/checkout@v4
 
       # Configure Workload Identity Federation and generate an access token.
       #
@@ -63,19 +60,38 @@ jobs:
       # including authenticating via a JSON credentials file.
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
+        uses: 'google-github-actions/auth@v2' # google-github-actions/auth@v2
         with:
-          workload_identity_provider: 'projects/725722089/locations/global/workloadIdentityPools/github' # TODO: replace with your workload identity provider
+          workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
 
+      # BEGIN - Docker auth and build
+      #
+      # If you already have a container image, you can omit these steps.
+      - name: 'Docker Auth'
+        uses: 'docker/login-action@v3' # docker/login-action@v3
+        with:
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.auth_token }}'
+          registry: '${{ env.REGION }}-docker.pkg.dev'
+
+      - name: 'Build and Push Container'
+        run: |-
+          DOCKER_TAG="$${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build --tag "${DOCKER_TAG}" .
+          docker push "${DOCKER_TAG}"
       - name: 'Deploy to Cloud Run'
-        uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
+
+        # END - Docker auth and build
+
+        uses: 'google-github-actions/deploy-cloudrun@v2' # google-github-actions/deploy-cloudrun@v2
         with:
           service: '${{ env.SERVICE }}'
           region: '${{ env.REGION }}'
-          # NOTE: If using a different source folder, update the image name below:
-          source: './'
+          # NOTE: If using a pre-built image, update the image name below:
 
+          image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
       # If required, use the Cloud Run URL output in later steps
       - name: 'Show output'
-        run: |-
+        run: |2-
+
           echo ${{ steps.deploy.outputs.url }}
